[+]index.html: se realiza segunda seccion (Menu) background negro al banner principal [+]main.css: se realizan estilos al banner-nosotros y ajuste de la seccion menu

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <p class="name-empresa">Halcon Dorado</p>
             </div>
             <nav>
-                <a href="" class="nav-link">Menu</a>
+                <a href="#carta" class="nav-link">Menu</a>
                 <a href="" class="nav-link">Contacto</a>
                 <a href="" class="nav-link">Ubicacion</a>
             </nav>
@@ -36,6 +36,66 @@
                 </div>
             </div> 
         </section>
+        <section id="carta" class="section-menu">
+            <div class="main-filter">
+                Menu Principal 
+            </div>
+            <div class="main-content">
+                <div class="products">
+                    <div class="card">
+                        <div class="card__image">
+                            <img class="product-image" src="./images/product-1.png" alt="">
+                        </div>
+                        <div class="card__info">
+                            <div class="card__name">Anchor & James </div>
+                            <div class="card__location">American | DownTown Union street</div>
+                            <div class="card__price">$30 and under</div>
+                            <div class="card__score">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <i class="fa-regular fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card__image">
+                            <img class="product-image" src="./images/product-1.png" alt="">
+                        </div>
+                        <div class="card__info">
+                            <div class="card__name">Anchor & James </div>
+                            <div class="card__location">American | DownTown Union street</div>
+                            <div class="card__price">$30 and under</div>
+                            <div class="card__score">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <i class="fa-regular fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card__image">
+                            <img class="product-image" src="./images/product-1.png" alt="">
+                        </div>
+                        <div class="card__info">
+                            <div class="card__name">Anchor & James </div>
+                            <div class="card__location">American | DownTown Union street</div>
+                            <div class="card__price">$30 and under</div>
+                            <div class="card__score">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <i class="fa-regular fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+        <section class="section-ubicacion">Ubicacion</section>
     </main>
     <footer class="footer">
         <div class="footer-container">
