--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -24,12 +24,14 @@
     </header>
     <main>
         <section class="section-delivery">
-            <div class="delivery-container1">
-                <div class="delivery-container2">Pide tu orden a domicilio y te llegara en pocos minutos (solo a nivel barrio)</div>
-                <button class="button-delivery">
-                    <a href="" class="delivery-link">Ordena Ahora Mismo!</a>
-                </button>
-            </div class="delivery">
+            <div class="container">
+                <div class="delivery-container1">
+                    <div class="delivery-container2">Pide tu orden a domicilio y te llegara en pocos minutos (solo a nivel barrio)</div>
+                    <button class="button-delivery">
+                        <a href="" class="delivery-link">Ordena Ahora Mismo!</a>
+                    </button>
+                </div>
+            </div>
         </section>
         <section class="section section-sobre-nosotros">
             <div class="container-fluid">
@@ -70,7 +72,7 @@
                     </div>
                     <div class="card">
                         <div class="card__image">
-                            <img class="product-image" src="./images/product-1.png" alt="">
+                            <img class="product-image" src="./images/product-1.png" alt="Poner texto alternativo">
                         </div>
                         <div class="card__info">
                             <div class="card__name">Mojarra con papa francesa </div>
@@ -103,9 +105,7 @@
                         </div>
                     </div>
                     <div id="botton-menu">
-                        <button class="button-menu">
-                            <a href="" class="menu-link">AQUI !</a>
-                        </button>
+                            <a href="#" class="menu-link button-menu">AQUI! </a>
                     </div>
                 </div>
         </section> 
@@ -120,13 +120,13 @@
                 °°°
             </div>
             <nav>
-                <a href="" class="footer-link">Inicio</a>
-                <a href="" class="footer-link">Menu</a>
-                <a href="" class="footer-link">Contacto</a>
-                <a href="" class="footer-link">Ubicacion</a>
+                <a href="#" class="footer-link">Inicio</a>
+                <a href="#" class="footer-link">Menu</a>
+                <a href="#" class="footer-link">Contacto</a>
+                <a href="#" class="footer-link">Ubicacion</a>
             </nav>
             <p>
-                @2024 | Todos los derechos reservados
+                &copy; 2024 | Todos los derechos reservados
             </p>
         </div>
     </footer>
